--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-cli-project",
+  "name": "uoc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "new": "plop"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "chalk": "2.4.2",
     "connect": "3.6.6",
     "core-js": "^3.8.3",
