--- a/.env.localhost
+++ b/.env.localhost
@@ -1,11 +1,8 @@
 # process.env  调用参数，开发环境
-ENV = 'development'
-
-# DEV URL
-VUE_APP_UOC_API = 'http://10.221.19.221:80'
+ENV = 'localhost'
 
 #redirectUrl
-VUE_APP_REDIRECTURL:'http://10.221.19.221/uoc-web/'
+VUE_APP_REDIRECTURL:'http://localhost:8080/'
 
 #loginUrl
 #10.221.19.221的client_id : 747068762850590720
