--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,14 @@
 # process.env  调用参数
+ENV = 'production'
 
 # PRODUCTION URL
 VUE_APP_UOC_API = 'https://iip.inspur.com'
+
+#redirectUrl
+VUE_APP_REDIRECTURL:'http://iip.inspur.com/uoc-web/'
+
+#loginUrl
+VUE_APP_LOGIN_URL:'https://iip.inspur.com/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
+
+#logoutUrl
+VUE_APP_LOGOUT_URL:'https://iip.inspur.com/sso/#/logout?redirect='
