--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build:prod": "vue-cli-service build",
-    "build:stage": "vue-cli-service build --mode staging",
+    "build:dev": "vue-cli-service build --mode development",
+    "build:prod": "vue-cli-service build --mode production",
+    "build:test": "vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src",
-    "new": "plop"
+    "new": "plop",
+    "webpack": "webpack --version"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -21,6 +23,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "runjs": "^4.4.2",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -40,7 +43,8 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "script-ext-html-webpack-plugin": "2.1.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-cli": "^5.0.1"
   },
   "eslintConfig": {
     "root": true,
