--- a/.env.development
+++ b/.env.development
@@ -1,16 +1,16 @@
 # process.env  调用参数，开发环境
-ENV = 'development'
+NODE_ENV= 'development'
 
 # DEV URL
 VUE_APP_UOC_API = 'http://10.221.19.221:80'
 
 #redirectUrl
-VUE_APP_REDIRECTURL:'http://10.221.19.221/uoc-web/'
+VUE_APP_REDIRECTURL = 'http://10.221.19.221/uoc-web/'
 
 #loginUrl
 #10.221.19.221的client_id : 747068762850590720
 #10.221.19.226的client_id : 841421702658260992
-VUE_APP_LOGIN_URL:'http://sso.maxkey.top:8018/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
+VUE_APP_LOGIN_URL = 'http://sso.maxkey.top:8018/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
 
 #logoutUrl
-VUE_APP_LOGOUT_URL:'http://sso.maxkey.top:8018/maxkey/#/logout?redirect='
+VUE_APP_LOGOUT_URL = 'http://sso.maxkey.top:8018/maxkey/#/logout?redirect='
