refactor: 接入代码规范

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,9 @@
-build/*.js
-src/assets
-public
-dist
-.js
+build/
+coverage/
+dist/
+es/
+lib/
+node_modules/
+**/*.min.js
+**/*-min.js
+**/*.bundle.js
