--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src",
     "new": "plop",
-    "webpack": "webpack --version"
+    "webpack": "webpack --version",
+    "f2elint-scan": "f2elint scan",
+    "f2elint-fix": "f2elint fix"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -18,6 +20,7 @@
     "connect": "3.6.6",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "f2elint": "^2.2.1",
     "js-cookie": "^3.0.1",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "^8.0.1",
@@ -37,32 +40,22 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/preload-webpack-plugin": "^2.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "plop": "^3.1.2",
-    "sass": "^1.32.7",
+    "sass": "~1.32.6",
     "sass-loader": "^12.0.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "vue-template-compiler": "^2.6.14",
     "webpack-cli": "^5.0.1"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "f2elint commit-file-scan",
+      "commit-msg": "f2elint commit-msg-scan"
+    }
+  }
 }
