--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,17 +5,11 @@
     "baseUrl": "./",
     "moduleResolution": "node",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
+  "exclude": ["node_modules", "dist"],
   "vueCompilerOptions": {
     "target": 2.7
   }
