--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "uoc",
+  "name": "unified-operation-center",
   "version": "0.1.0",
+  "description": "运营中心重新构建",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --mode localhost",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "chalk": "2.4.2",
     "connect": "3.6.6",
     "core-js": "^3.8.3",
@@ -23,6 +25,7 @@
     "f2elint": "^2.2.1",
     "js-cookie": "^3.0.1",
     "mockjs": "1.0.1-beta3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "runjs": "^4.4.2",
