feat: 路由菜单功能修改

--- a/.env.localhost
+++ b/.env.localhost
@@ -7,7 +7,12 @@ VUE_APP_REDIRECTURL= 'http://localhost:8080/'
 #loginUrl
 #10.221.19.221的client_id : 747068762850590720
 #10.221.19.226的client_id : 841421702658260992
-VUE_APP_LOGIN_URL= 'http://sso.maxkey.top:8018/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
+# VUE_APP_LOGIN_URL= 'http://117.73.11.254:8018/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
+# #logoutUrl
+# VUE_APP_LOGOUT_URL='http://117.73.11.254:8018/maxkey/#/logout?redirect='
+
+#loginUrl
+VUE_APP_LOGIN_URL= 'https://iip.inspur.com/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
 
 #logoutUrl
-VUE_APP_LOGOUT_URL='http://sso.maxkey.top:8018/maxkey/#/logout?redirect='
+VUE_APP_LOGOUT_URL= 'https://iip.inspur.com/sso/#/logout?redirect='
