--- a/.env.production
+++ b/.env.production
@@ -2,10 +2,10 @@
 NODE_ENV = 'production'
 
 # PRODUCTION URL
-VUE_APP_UOC_API = 'https://iip.inspur.com'
+VUE_APP_mtoc_API = 'https://iip.inspur.com'
 
 #redirectUrl
-VUE_APP_REDIRECTURL:'http://iip.inspur.com/uoc-web/'
+VUE_APP_REDIRECTURL:'http://iip.inspur.com/mtoc-web/'
 
 #loginUrl
 VUE_APP_LOGIN_URL:'https://iip.inspur.com/sign/authz/oauth/v20/authorize?client_id=747068762850590720&response_type=code&redirect_uri='
