--- a/.env.staging
+++ b/.env.staging
@@ -2,10 +2,10 @@
 NODE_ENV = 'development'
 
 # DEV URL
-VUE_APP_UOC_API = 'http://10.221.19.222:82'
+VUE_APP_mtoc_API = 'http://10.221.19.222:82'
 
 #redirectUrl
-VUE_APP_REDIRECTURL:'http://10.221.19.226/uoc-web/'
+VUE_APP_REDIRECTURL:'http://10.221.19.226/mtoc-web/'
 
 #loginUrl,10.221.19.226的client_id
 VUE_APP_LOGIN_URL:'http://sso.maxkey.top:8018/sign/authz/oauth/v20/authorize?client_id=841421702658260992&response_type=code&redirect_uri='
